--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
     <header><img height="130px" src="GYB logo-02 (1) (1) (1) (1) (1).png" alt="gyb">
-        
+        <div class="image">
+
+            <img src="pngkey.com-indian-students-png-images-3638771.png" alt="Kids">
+        </div>
         <div class="top">
 
             <nav>
@@ -51,13 +54,7 @@
 
                 <img width="280px" src="IMG_0447.jpeg" alt="Sujay Kumar Singh">
 
-                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium earum provident
-                    pariatur in voluptate consectetur sit est iure dolorem unde, adipisci, perspiciatis mollitia non
-                    fugit nobis eaque facilis similique, repudiandae sed quidem accusamus voluptatibus omnis. Nihil
-                    mollitia quod expedita tempore, accusamus qui aut ut sapiente nobis repellendus veritatis neque
-                    error distinctio perferendis, obcaecati pariatur corrupti. Adipisci, alias architecto reiciendis
-                    aspernatur dicta quas esse, veritatis obcaecati mollitia pariatur saepe laudantium consequatur rem?
-                    Sapiente necessitatibus eius esse amet? Saepe vitae laborum laudantium!</p>
+                <p class="para">Sujay Kumar Singh is a dedicated technical team member of GYB Club, bringing his expertise in technology and innovation to support the club’s mission of empowering underprivileged children and elderly individuals. With a strong background in  web development, software engineering, and IT support, Sujay plays a crucial role in enhancing the club’s digital presence, streamlining operations, and implementing tech-driven solutions to maximize impact. His passion for social service, combined with his technical proficiency, makes him an invaluable asset to the GYB Club team. </p>
 
 
 
@@ -73,13 +70,7 @@
 
             <img width="280px" src="IMG_1552.jpeg" alt="Disha Shiromani">
 
-            <p class="dishapara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium earum provident
-                pariatur in voluptate consectetur sit est iure dolorem unde, adipisci, perspiciatis mollitia non fugit
-                nobis eaque facilis similique, repudiandae sed quidem accusamus voluptatibus omnis. Nihil mollitia quod
-                expedita tempore, accusamus qui aut ut sapiente nobis repellendus veritatis neque error distinctio
-                perferendis, obcaecati pariatur corrupti. Adipisci, alias architecto reiciendis aspernatur dicta quas
-                esse, veritatis obcaecati mollitia pariatur saepe laudantium consequatur rem? Sapiente necessitatibus
-                eius esse amet? Saepe vitae laborum laudantium!</p>
+            <p class="dishapara">Disha Shiromani is a committed technical team member of GYB Club, contributing her expertise in technology to support the club’s initiatives for underprivileged children and elderly individuals. With a strong foundation in [mention relevant skills like web development, software engineering, or IT support], she plays a key role in enhancing the club’s digital outreach, optimizing systems, and implementing innovative tech solutions. Her dedication to social service, combined with her technical skills, makes her an essential part of the GYB Club team.</p>
 
 
 
@@ -95,13 +86,7 @@
 
             <img width="280px" src="IMG_1553.jpeg" alt="Sagar Kumar">
 
-            <p class="sagarpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium earum provident
-                pariatur in voluptate consectetur sit est iure dolorem unde, adipisci, perspiciatis mollitia non fugit
-                nobis eaque facilis similique, repudiandae sed quidem accusamus voluptatibus omnis. Nihil mollitia quod
-                expedita tempore, accusamus qui aut ut sapiente nobis repellendus veritatis neque error distinctio
-                perferendis, obcaecati pariatur corrupti. Adipisci, alias architecto reiciendis aspernatur dicta quas
-                esse, veritatis obcaecati mollitia pariatur saepe laudantium consequatur rem? Sapiente necessitatibus
-                eius esse amet? Saepe vitae laborum laudantium!</p>
+            <p class="sagarpara">Sagar Kumar is a skilled and passionate technical team member of GYB Club, playing a vital role in leveraging technology to support the club’s mission of helping underprivileged children and elderly individuals. With expertise in [ web development, software engineering,  IT support], he contributes to improving the club’s digital infrastructure, enhancing online engagement, and developing tech-driven solutions for greater impact. His commitment to social service, combined with his technical proficiency, makes him an invaluable part of the GYB Club team.</p>
 
 
 
