--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <img width="280px" src="IMG_1552.jpeg" alt="Disha Shiromani">
 
-            <p class="dishapara">Disha Shiromani is a committed technical team member of GYB Club, contributing her expertise in technology to support the club’s initiatives for underprivileged children and elderly individuals. With a strong foundation in [mention relevant skills like web development, software engineering, or IT support], she plays a key role in enhancing the club’s digital outreach, optimizing systems, and implementing innovative tech solutions. Her dedication to social service, combined with her technical skills, makes her an essential part of the GYB Club team.</p>
+            <p class="dishapara">Disha Shiromani is a committed technical team member of GYB Club, contributing her expertise in technology to support the club’s initiatives for underprivileged children and elderly individuals. With a strong foundation in software engineering and IT support, she plays a key role in enhancing the club’s digital outreach, optimizing systems, and implementing innovative tech solutions. Her dedication to social service, combined with her technical skills, makes her an essential part of the GYB Club team.</p>
 
 
 
