--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header><img height="130px" src="GYB logo-02 (1) (1) (1) (1) (1).png" alt="gyb">
         <div class="image">
 
-            <img src="pngkey.com-indian-students-png-images-3638771.png" alt="Kids">
+            <img src="children.png" alt="Kids">
         </div>
         <div class="top">
 
